added comments from Tomas and Kate

--- a/manuscript/Ideas_and_perspectives_proposal.tex
+++ b/manuscript/Ideas_and_perspectives_proposal.tex
@@ -44,6 +44,7 @@
                Oxford OX1 3PS, UK
                                }
 
+% The instructions are for a single, 300-word paragraph proposal. The large paragraph is now at 299 words, and we can maybe hope that they won't count the preamble and nice closing.
 
 \opening{Dear Prof. Coulson:}
 
@@ -51,11 +52,7 @@
     following proposal for an Ideas \& Perspectives article in 
     \myjournal:
 
-
-
-Researchers working with ecological networks widely acknowledge that empirical data come with major caveats: the set of observed interactions included in such networks depends on the local conditions and sampling methodology used as well as on the set of interactions that actually occur. An interaction may not be observed because 1) it does not occur, 2) species which could interact are too rare to encounter each other, inclement weather or other conditions prevented the interaction, etc., or 3) detection of interactions was not perfect. From the perspective of an interaction matrix, these sources of non-interaction are indistinguishable. We propose a Bayesian framework with which to quantify the uncertainty around both particular interactions and network-level metrics. We will illustrate this framework using an extraordinarily large and well-replicated set of plant-galler-parasitoid networks. By quantifying the uncertainty around interactions, network ecologists can more rigorously compare networks, identify patterns which should be more robust to variation in sampling, develop better models and predictions, etc.
-
-The authors involved in this study bring varied perspectives to this discussion. Tomas Roslin has extensive expertise in gathering network data and has first-hand experience with each source of variation we describe. Dominique Gravel and Anna Ekl\"{o}f both offer a more theoretical perspective and have extensive experience with probabilistic approaches to network analyses. The two more junior authors, Kate Wootton and Alyssa Cirtwill, are involved with a variety of network analyses using both empirical and simulated networks and have a strong interest in developing more robust methods for network analyses.
+    Representing communities as networks of interactions (links) between taxa (nodes) is a central approach in modern community ecology. With network data becoming increasingly available, empirical comparisons of network structure along different environmental gradients is emerging as one of the hottest fields of community research. Yet, researchers working with ecological networks widely acknowledge that empirical data come with major caveats as the probability of observing different interactions depends on sampling effort/methodology and local conditions as well as the intrinsic probability of any interaction. These contingencies mean that there are many reasons one might fail to observe an interaction (e.g., it might occur but not be detectable or be feasible but not occur due to weather conditions during sampling). Problematically, these sources of non-interaction are often indistinguishable within an interaction matrix. As a potential solution, we propose a Bayesian framework which partitions the uncertainty associated with missing interactions into explicit components. This framework can be used to quantify the uncertainty around both particular interactions and network-level metrics. We will illustrate this framework using an extraordinarily large and well-replicated set of plant-galler-parasitoid networks recently published as a data paper (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730). Quantifying the uncertainty around interactions will allow more rigorously comparisons between networks and the identification of more robust patterns in network structure. The authors involved in this study contribute a range of valuable perspectives. Dominique Gravel has developed techniques for novel types of interaction distribution modelling. Anna Eklöf contributes extensive experience with probabilistic network analyses. Tomas Roslin has vast experience with gathering and using network data and has first-hand experience with each source of variation we describe. The two junior authors, Kate Wootton and Alyssa Cirtwill, work with both empirical and simulated networks and have a strong interest in developing more robust methods for network analyses.
 
 We are confident that the applicability of this method to all types of ecological networks and the importance of addressing sources of uncertainty in the data will mean that this article is of interest to a broad readership. We hope that you agree and eagerly await your reply.
 
