learning to use github

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article} 
+﻿\documentclass[12pt]{article} 
 \usepackage{amsmath} 
 \usepackage[dvips]{graphicx}
 \usepackage{multirow} 
@@ -52,7 +52,7 @@ Link\"{o}ping, Sweden\\
 \section*{Introduction}
 
     % Present Salix data with holes as an example of uncertainty in data. Focus just on the white and grey, ignore uncertainty in the blacks
-
+% Just checking
 
     Ecological networks-- which include antagonistic food webs and host-parasite networks as well as plant-pollinator and plant-frugivore mutualist networks --are usually considered to be static representations of the communities and interactions they describe. That is, whether the network is assembled based on aggregated data, a single intensive "snapshot" sample, or expert knowledge, interactions are assumed to occur at constant frequencies~\citep{Olesen2011a}. This assumption conflicts with known variation in interactions over time~\citep{Kitching1987,Olesen2011a} and space~\citep{Kitching1987,Baiser2012} and between individuals of a given species~\citep{Pires2011a,Fodrie2015,Novak2015}. Taking the variation in interaction frequencies into account would therefore represent a substantial increase in the realism of ecological networks as representations of ecological communities.
 
