--- a/manuscript/Ideas_and_perspectives_proposal.tex
+++ b/manuscript/Ideas_and_perspectives_proposal.tex
@@ -52,9 +52,11 @@
     following proposal for an Ideas \& Perspectives article in 
     \myjournal:
 
-    Representing communities as networks of interactions (links) between taxa (nodes) is a central approach in modern community ecology. With network data becoming increasingly available, empirical comparisons of network structure along different environmental gradients is emerging as one of the hottest fields of community research. Yet, researchers working with ecological networks widely acknowledge that empirical data come with major caveats as the probability of observing different interactions depends on sampling effort/methodology and local conditions as well as the intrinsic probability of any interaction. These contingencies mean that there are many reasons one might fail to observe an interaction (e.g., it might occur but not be detectable or be feasible but not occur due to weather conditions during sampling). Problematically, these sources of non-interaction are often indistinguishable within an interaction matrix. As a potential solution, we propose a Bayesian framework which partitions the uncertainty associated with missing interactions into explicit components. This framework can be used to quantify the uncertainty around both particular interactions and network-level metrics. We will illustrate this framework using an extraordinarily large and well-replicated set of plant-galler-parasitoid networks recently published as a data paper (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730). Quantifying the uncertainty around interactions will allow more rigorously comparisons between networks and the identification of more robust patterns in network structure. The authors involved in this study contribute a range of valuable perspectives. Dominique Gravel has developed techniques for novel types of interaction distribution modelling. Anna Eklöf contributes extensive experience with probabilistic network analyses. Tomas Roslin has vast experience with gathering and using network data and has first-hand experience with each source of variation we describe. The two junior authors, Kate Wootton and Alyssa Cirtwill, work with both empirical and simulated networks and have a strong interest in developing more robust methods for network analyses.
 
-We are confident that the applicability of this method to all types of ecological networks and the importance of addressing sources of uncertainty in the data will mean that this article is of interest to a broad readership. We hope that you agree and eagerly await your reply.
+    Representing communities as networks of interactions (links) between taxa (nodes) is a central approach in modern community ecology. These networks are usually treated as fixed, deterministic entities. Yet, researchers working with ecological networks widely acknowledge that empirical data are in fact samples of a community and come with major caveats. The probability of observing different interactions depends on sampling effort/methodology and local conditions as well as the intrinsic probability of any interaction. These contingencies mean that there are many reasons one might fail to observe an interaction (e.g., it might occur sometimes but not during sampling due to weather). Problematically, these sources of non-interaction are often indistinguishable within an interaction matrix. As a potential solution, we propose a Bayesian framework which partitions the uncertainty associated with missing interactions into explicit components and allows us to place confidence intervals around each estimated interaction probability. The Bayesian framework also facilitates the use of prior information (e.g., species traits) to reduce uncertainty around some interactions. We will illustrate this framework using an extraordinarily  well-replicated set of plant-galler-parasitoid networks recently published as a data paper (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730). Using this dataset, we will demonstrate how uncertainty surrounding each interaction probability affects network-level metrics. Acknowledging this uncertainty is crucial for valid comparison of networks along gradients. The authors involved in this study contribute a range of valuable perspectives. Dominique Gravel has developed techniques for novel types of interaction distribution modelling. Anna Ekl\"{o}f contributes extensive experience with probabilistic network analyses. Tomas Roslin has vast experience with gathering and using network data and has first-hand experience with each source of variation we describe. The two junior authors, Kate Wootton and Alyssa Cirtwill, work with both empirical and simulated networks and have a strong interest in developing more robust methods for network analyses.
+
+    
+    We are confident that the applicability of this method to all types of ecological networks and the importance of addressing sources of uncertainty in the data will mean that this article is of interest to a broad readership. We hope that you agree and eagerly await your reply.
 
 
 
